Fix logo in hero section not shrinking on smaller devices

--- a/src/assets/output.css
+++ b/src/assets/output.css
@@ -636,20 +636,20 @@ video {
   height: 100%;
 }
 
+.min-h-0 {
+  min-height: 0px;
+}
+
 .w-10 {
   width: 2.5rem;
 }
 
-.w-3\/5 {
-  width: 60%;
+.w-12 {
+  width: 3rem;
 }
 
 .w-5 {
   width: 1.25rem;
-}
-
-.w-64 {
-  width: 16rem;
 }
 
 .w-auto {
@@ -660,13 +660,12 @@ video {
   width: 100%;
 }
 
-.w-12 {
-  width: 3rem;
+.min-w-0 {
+  min-width: 0px;
 }
 
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
+.max-w-12 {
+  max-width: 3rem;
 }
 
 .max-w-3xl {
@@ -677,8 +676,8 @@ video {
   max-width: 32rem;
 }
 
-.max-w-12 {
-  max-width: 3rem;
+.shrink {
+  flex-shrink: 1;
 }
 
 .basis-1\/3 {
